<resources>
    <string name="app_name">YouCook</string>
    <string name="by">Por:</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user_recipes">Minhas receitas</string>
    <string name="user_favorites">Favoritas</string>
    <string name="user_name">[Clique aqui]</string>
    <string name="hint_qt">Ex: 2.5</string>
    <string name="de">de</string>
    <string name="qt">Quantidade</string>
    <string name="unit">Unidade</string>
    <string name="ing">Ingrediente</string>
    <string name="inst">Inserir instrucoes</string>
    <string name="hint_name">Ex: banana, trigo</string>
    <string name="hint_duration">Ex: 5 min, 2 h</string>
    <string name="hint_unit">Ex: xicaras, gramas</string>
    <string name="hint_instr">Ex: Mexer bem o creme</string>
    <string name="user_age">[Clique aqui]</string>
    <string name="user_hobby">[Clique aqui]</string>
    <string name="doce">Doce</string>
    <string name="photos">Adicionar fotos</string>
    <string name="salgado">Salgado</string>
    <string name="fim">Finalizar</string>
    <string name="photo">Foto</string>
    <string name="leg">Legenda</string>
    <string name="hint_leg">Clique para digitar</string>
    <string name="duration">Duracao</string>
    <string name="instr">Instrucao</string>
    <string name="por">por</string>
    <string name="vegan">Vegetariano</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="food_types">Classificacao:</string>
    <string name="minutos">minutos</string>
    <string name="time_max">Tempo max.:</string>
    <string name="time">Tempo de preparo:</string>
    <string name="difficulty_max">Dificuldade max.:</string>
    <string name="difficulty">Dificuldade:</string>
    <string name="insert_ingredients">Inserir ingredientes</string>
    <string name="title">Titulo da receita:</string>
    <string name="fim_no">Sem foto</string>
    <string name="hint_click">Clique para foto</string>
    <string name="forno">Usa forno</string>
    <string name="has_photo">Tem foto</string>
    <string name="nome">Nome:</string>
    <string name="idade">Idade:</string>
    <string name="chefhobby">Chef ou Hobby?</string>
    <string name="pesquisar_novo">Nova pesquisa</string>
    <string name="sem_uso">Pesquise uma receita ou escolha uma sua!</string>
    <string name="caract">Caracteristicas:</string>
    <string name="favoritar">Favoritar</string>
    <string name="prepara">Preparar prato</string>
    <string name="ver_inst">Ver instrucoes</string>
    <string name="fim_uso">Terminar uso</string>
    <string name="photos_e_fim">Adicionar fotos e finalizar</string>
</resources>
