<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_color">

    <LinearLayout
        android:id="@+id/ll_profile_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/rl_photo0"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_marginRight="10dp"
            android:background="@color/teal"
            android:layout_marginBottom="8dp">

        <ImageView
            android:id="@+id/img_photo0"
            android:layout_width="140dp"
            android:layout_height="180dp"
            android:clickable="true"
            android:layout_alignParentLeft="true"
            android:background="@color/white"/>

        <TextView
            android:id="@+id/myImageViewText0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/img_photo0"
            android:layout_alignTop="@+id/img_photo0"
            android:layout_alignRight="@+id/img_photo0"
            android:layout_alignBottom="@+id/img_photo0"
            android:layout_margin="1dp"
            android:gravity="center"
            android:textSize="15sp"
            android:text="@string/hint_click"
            android:textColor="@color/gray" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_profile_top_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                <TextView
                    android:id="@+id/name_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:text="@string/nome"/>

                <EditText
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_name"
                    android:textColorHint="@color/teal"
                    android:textSize="16sp"
                    android:maxLength="18"
                    android:inputType="text"
                    android:textColor="@color/teal"
                    android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/idade_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:text="@string/idade"/>

            <EditText
                android:id="@+id/user_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/user_age"
                android:textColorHint="@color/teal"
                android:textSize="16sp"
                android:textColor="@color/teal"
                android:maxLength="2"
                android:inputType="number"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/chef_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:text="@string/chefhobby"/>

            <TextView
                android:id="@+id/user_hobby"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_hobby"
                android:textSize="16sp"
                android:clickable="true"
                android:textColor="@color/teal"
                android:layout_marginBottom="5dp"/>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button_user_recipes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:height="70dp"
        android:width="300dp"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:textColor="@color/white"
        android:text="@string/user_recipes"
        android:background="@color/teal"
        android:drawableLeft="@mipmap/ic_recipe_list"/>

    <Button
        android:id="@+id/button_user_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:height="70dp"
        android:width="300dp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:background="@color/teal"
        android:text="@string/user_favorites"
        android:drawableLeft="@mipmap/ic_marked_star"/>
</LinearLayout>