<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color">

    <RelativeLayout
        android:id="@+id/rl_fur"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <TextView
            android:id="@+id/tv_use_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:textColor="@color/teal"/>

        <ImageView
            android:id="@+id/img_use_dificuldade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"/>

        <TextView
            android:id="@+id/tv_caract_use"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/teal"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tv_use_title"
            android:text="@string/caract"/>

        <TextView
            android:id="@+id/tv_favoritar_use"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="40dp"
            android:textColor="@color/teal"
            android:textStyle="bold"
            android:layout_below="@+id/img_use_dificuldade"
            android:layout_alignParentRight="true"
            android:text="@string/favoritar"/>

        <ImageView
            android:id="@+id/img_favoritar_use"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/tv_favoritar_use"
            android:layout_alignParentRight="true"
            android:layout_marginRight="8dp"
            android:clickable="true"/>

        <TextView
            android:id="@+id/sal_use"
            android:layout_below="@+id/tv_caract_use"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/teal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/doce_use"
            android:layout_below="@+id/sal_use"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:textColor="@color/teal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/vegan_use"
            android:layout_below="@+id/doce_use"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:textSize="15sp"
            android:textColor="@color/teal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/forno_use"
            android:layout_below="@+id/vegan_use"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:textColor="@color/teal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_chef_use"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/teal"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_above="@+id/btn_preparar_use"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"/>

        <Button
            android:id="@+id/btn_preparar_use"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/prepara"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="50dp"
            android:textColor="@color/white"
            android:background="@color/teal"/>

    </RelativeLayout>
</LinearLayout>